src/css/desktop.css
header,
main {
  width: 100%;
  max-width: 1440px;
  box-sizing: border-box;
}

.container {
  width: 100%;
}

.nav {
  width: 100%;
  height: 60px;
  padding: 6px 32px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.nav .nav__logo {
  display: flex;
  gap: 8px;
  align-items: center;
}
.nav .nav__logo .nav__logo-text {
  font-family: Roboto;
  font-weight: 400;
  font-size: 24px;
  line-height: 100%;
  letter-spacing: 0%;
  text-align: center;
  vertical-align: middle;
}

.nav .nav__menu-list {
  display: flex;
  gap: 32px;
  align-items: center;
  justify-content: center;
}

.nav .nav__menu .nav__menu-link {
  font-family: Roboto;
  font-weight: 500;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: 0%;
  text-align: center;
  vertical-align: middle;
  text-transform: uppercase;
}
.nav .nav__menu .nav__menu-link:hover {
  color: orange;
}

.nav .nav__menu .nav__menu-link:where(.active) {
  color: orange;
}

.hero {
  /* position: relative; */
  width: 100%;
  height: 720px;
  box-sizing: border-box;
  border: 1px solid white;
  display: flex;
}

.hero .hero__content {
  height: auto;
  padding-block: 118px;
  padding-left: 135px;
  background: linear-gradient(83.16deg, #111111 36.85%);
  box-shadow: 0px 4px 4px rgba(17, 17, 17, 0) 60.05%;
  filter: drop-shadow(2px 4px 6px black);
}

.hero .hero__content-background {
  height: auto;
  width: 100%;
}

.hero .hero__content-background .hero__content-background-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: ;
}
.hero .hero__content .hero__content-stars {
  display: flex;
  gap: 5px;
}
.hero .hero__content .hero__content-title {
  font-family: Roboto;
  font-weight: 700;
  font-size: 64px;
  line-height: 100%;
  letter-spacing: 0%;
  vertical-align: middle;
  width: 670px;
  margin-bottom: 16px;
}

.hero .hero__content .hero__content-info {
  max-width: 370px;
}
.hero .hero__content .hero__content-info .hero__content-info-text {
  font-family: Roboto;
  font-weight: 400;
  font-size: 16px;
  line-height: 100%;
  letter-spacing: 0%;
  vertical-align: middle;
  margin-bottom: 36px;
}
.hero .hero__content .hero__content-info .hero__content-info-buttons {
  display: flex;
  gap: 14px;
}

